// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/MegaButton AsLink smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <a class="MegaButton_button__njALO "
     href="https://www.skatteetaten.no"
     role="button"
  >
    Klikk her
  </a>
</div>
`;

exports[`Tester/MegaButton AsLinkEmptyString smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <a class="MegaButton_button__njALO "
     href
  >
    Klikk her
  </a>
</div>
`;

exports[`Tester/MegaButton AsLinkExternal play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <a class="MegaButton_button__njALO "
     href="https://www.skatteetaten.no"
     role="button"
  >
    Klikk her
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz MegaButton_icon__KSvBN"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </a>
</div>
`;

exports[`Tester/MegaButton Defaults play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithAccesskey play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          accesskey="j"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithAriaDescribedby play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
          aria-describedby="testid1234"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithAttributes play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button id="htmlId"
          class="MegaButton_button__njALO dummyClassname"
          lang="nb"
          data-testid="123ID"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithDisabled play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          disabled
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithEventHandlers play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
  >
    Knapp har blitt klikket på
  </button>
</div>
`;

exports[`Tester/MegaButton WithExternalIcon play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
  >
    Klikk her
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz MegaButton_icon__KSvBN"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongText smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
  >
    Denne knappen har en veldig lang tekst. Så lang at den må brekke.
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongTextAndBreaking smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
  >
    Denneknappenharenveldiglangtekst.Sålangatdenmåbrekke.
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongTextAndExternalIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
  >
    Denne knappen har en veldig lang tekst. Icon skal da plasseres løpende etter tekster på siste linje
    <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz MegaButton_icon__KSvBN"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/MegaButton WithRef play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithType play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__njALO "
          type="submit"
  >
    Klikk her
  </button>
</div>
`;
